fixed some css (navigation mobile and events)

--- a/src/styles/partials/navigation.scss
+++ b/src/styles/partials/navigation.scss
@@ -76,7 +76,6 @@
 		display: block;
 		height: 55px;
 		line-height: 55px;
-		padding-left: 5%;
 		text-align: center;
 		text-transform: uppercase;
 		
